--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GlobalDefaultGameMode=/Game/Blueprints/BP_ArenaShooterGameMode.BP_ArenaShooterGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
