--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/ArenaLevel.ArenaLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_ArenaShooterGameMode.BP_ArenaShooterGameMode_C
+EditorStartupMap=/Game/ArenaLevel.ArenaLevel
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
